Mon Oct 29 16:27:55 2001  David Helder  <dhelder@umich.edu>

	* src/unix.c: Unlink socket on delete, doc fixes
	* examples/echoserver-unix.c: Delete socket on SIGINT, SIGTERM

	* src/tcp.c (gnet_tcp_socket_server_accept_nonblock): Doc fix.

Thu Oct 25 10:48:51 2001  David Helder  <dhelder@umich.edu>

	* configure.in, Makefile.am: Include deb/rpm stuff

Wed Oct 24 17:35:51 2001  David Helder  <dhelder@umich.edu>

	* configure.in: Check if debian or RPM files are 
	   there before AC_OUTPUT.  This causes an autoconf
	   warning, but not a configure warning.
	* Makefile.am: Removed .spec and debian from dist.  If
	   you really need it, I can put it back.

Wed Oct 24 10:02:43 2001  Ross Golder  <ross@golder.org>

	* src/pack.h: Commented out argument to #endif.
	* src/sha.h: Removed extraneous character (typo?).
	* Makefile.am: Updated handling of rpms and spec files.
	* Makefile.am: Added debian directory to make dist.

Wed Oct 24 15:58:14 2001  David Helder  <dhelder@umich.edu>

	* tests/unpack.c (main): Fix bugs

Tue Oct 23 15:00:55 2001  David Helder  <dhelder@umich.edu>

	* doc/tmpl/socks.sgml: Added
	* doc/gnet.sgml: Added socks

Tue Oct 23 13:03:09 2001  David Helder  <dhelder@umich.edu>

	* configure.in: Check for pthreads in c_r (for BSD)

Tue Oct 23 10:50:10 2001  David Helder  <dhelder@umich.edu>

	* doc/gnet-sections.txt: Updated
	* *: Doc fixes

	* src/ftp.[ch]: Removed

Tue Oct 23 10:26:17 2001  David Helder  <dhelder@umich.edu>

	* *: Integrate Mark Ferlatte's Unix patch.

Wed Oct 17 22:26:42 2001  David Helder  <dhelder@umich.edu>

	* src/tcp.c: Integrated SOCKS into gnet_tcp_socket_new_async.
	* src/gnet-private.h (_GTcpSocketAsyncState ): Added field
	    for socks server (so it can be changed while the connect
	    is in effect).
	* BUGS: Added note about blocking in tcp_socket_new_async
	    during socks negotiation.
	
	* examples/echoclient.c: Finished async example.
	* test/echoclient-socks.c: Renamed from socksclient.  Now does